# IntelliSenseFailPch

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
mylib/: CMakeLists.txt  mylib-pch.h  mylib.cpp  mylib.h
